// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/ui/AutoComplete default 1`] = `
<div
  class="p-fluid"
  style="height: 100%;"
>
  <span
    aria-haspopup="listbox"
    aria-owns="pv_id_1_list"
    class="lck-autocomplete p-autocomplete p-component p-inputwrapper p-autocomplete-dd"
  >
    <input
      aria-autocomplete="list"
      aria-controls="pv_id_1_list"
      autocomplete="off"
      class="p-autocomplete-input p-inputtext p-component p-autocomplete-dd-input"
      placeholder="Sélectionnez une option"
      role="searchbox"
      type="text"
    />
     
    <!---->
     
    <!---->
     
    <button
      class="p-autocomplete-dropdown p-button p-component p-button-icon-only"
      type="button"
    >
      <span
        class="pi pi-chevron-down p-button-icon"
      />
       
      <span
        class="p-button-label"
      >
         
      </span>
       
      <!---->
      <span
        class="p-ink"
      />
    </button>
     
    <!---->
  </span>
</div>
`;

exports[`storyshots components/ui/AutoComplete with suggestions and dropdown opened 1`] = `
<div
  class="p-fluid"
  style="height: 100%;"
>
  <span
    aria-haspopup="listbox"
    aria-owns="pv_id_2_list"
    class="lck-autocomplete p-autocomplete p-component p-inputwrapper p-autocomplete-dd"
    suggestions=""
  >
    <input
      aria-autocomplete="list"
      aria-controls="pv_id_2_list"
      autocomplete="off"
      class="p-autocomplete-input p-inputtext p-component p-autocomplete-dd-input"
      placeholder="Sélectionnez une option"
      role="searchbox"
      type="text"
    />
     
    <!---->
     
    <!---->
     
    <button
      class="p-autocomplete-dropdown p-button p-component p-button-icon-only"
      type="button"
    >
      <span
        class="pi pi-chevron-down p-button-icon"
      />
       
      <span
        class="p-button-label"
      >
         
      </span>
       
      <!---->
      <span
        class="p-ink"
      />
    </button>
     
    <!---->
  </span>
</div>
`;
